--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -93,6 +93,7 @@ body {
     @apply bg-background text-foreground;
     /* Apply dark theme by default */
     @apply dark;
+    @apply overflow-y-hidden
   }
 }
 
